infra/manifests/kyverno-policies/base/clusterpolicy/allowed-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-registries
spec:
  validationFailureAction: Enforce
  background: false

  rules:
    - name: validate-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - dev
                - prod


      validate:
        message: "Only approved registries are allowed."
        pattern:
          spec:
            containers:
              - image: "harbor.internal:30443/*"
