infra/manifests/kyverno-policies/base/clusterpolicy/disallow-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-hostpath
spec:
  validationFailureAction: Audit
  background: false


  rules:
    - name: hostpath
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "hostPath volumes are not allowed."

        pattern:
          spec:
            =(volumes):
              - X(hostPath): "null"
