infra/manifests/kyverno-policies/base/clusterpolicy/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Privileged containers are not allowed."

        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
