infra/manifests/kyverno-policies/base/clusterpolicy/verify-keyless-signatures.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-keyless-signatures

spec:
  validationFailureAction: Enforce
  background: false

  rules:
    - name: verify-image

      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - dev
                - prod

      verifyImages:
        - imageReferences:
            - "192.168.56.11:30080/*"

          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/Ajaz3800/devsecops-app/.github/workflows/ci.yml@refs/heads/main"

                    issuer: "https://token.actions.githubusercontent.com"
